--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,7 +12,10 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner 'android.support.test.runner.AndroidJUnitRunner'
+    }
 
+    dexOptions {
+        javaMaxHeapSize "4g"
     }
 
     buildTypes {
